feat: favicon 적용 1차