@@ -10,8 +10,9 @@ public class FileConverter {
     }
 
     public static String fileToString(String uri) throws IOException {
-
-        return Files.readString(
+        byte[] bytes = Files.readAllBytes(
             new File("./webapp" + uri).toPath());
+
+        return new String(bytes);
     }
 }
